Fixed overflow scroll on content_container causing search buttons to trigger items rerender when buttons are hovered

--- a/src/app.css
+++ b/src/app.css
@@ -1,11 +1,12 @@
 #content_container {
     display: flex;
     flex-direction: column;
+    height: 99.5vh;
 }
 
 #fleet_builder {
     flex-grow: 1;
-    overflow-y: auto;
+    overflow-y: hidden;
 }
 
 .actions {
